Fixed #12: Create a modal navigation container to avoid status bar on iOS gets cut off

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -25,12 +25,6 @@
     text-align: center;
 }
 
-.platform-ios .ios-header {
-    height:calc(56px + 20px);
-    min-height:calc(56px + 20px);
-    padding-top:20px;
-}
-
 .alert-message {
   overflow-y: auto;
 }
